// Copyright Â© 2020 Krishna Iyer Easwaran.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package main;

option go_package = "go.krishnaiyer.dev/go-snippets/oneof/pbgen";

message user{
    oneof identifier{
        string username = 1;
        string email = 2;
        int64 user_id = 3;
    }
    string password = 5;
}

// Does whatever a sub message it can.
message SubMessage{
    string id = 1;
}

// Does whatever a sample message it can.
message SampleMessage {
  oneof test_oneof {
    string name = 1;
    SubMessage sub_message = 2;
  }
}
